# hosts-blocker

./: .gitignore  LICENSE  README.md  demo.tape  pyproject.toml
.github/workflows/: ci.yml
src/hosts_blocker/: __init__.py  __main__.py  main.py
tests/: test_main.py
