[project]
name = "hosts-blocker"
version = "0.1.0"
description = "Block selected websites at the OS level by updating the hosts file"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
hosts-blocker = "hosts_blocker.main:main"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]

[tool.uv]
default-groups = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hosts_blocker"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "B", "SIM", "I", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
files = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
